[gd_scene load_steps=13 format=2]

[ext_resource path="res://ItemList.gd" type="Script" id=1]
[ext_resource path="res://MainMenu.gd" type="Script" id=2]
[ext_resource path="res://fade_in/FadeIn.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Fonts/overseer/Overseer.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/background0.jpg" type="Texture" id=5]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="Theme" id=2]
ItemList/colors/font_color = Color( 0.63, 0.63, 0.63, 1 )
ItemList/colors/font_color_selected = Color( 1, 1, 1, 1 )
ItemList/colors/guide_color = Color( 0, 0, 0, 0.1 )
ItemList/constants/hseparation = 4
ItemList/constants/icon_margin = 4
ItemList/constants/line_separation = 2
ItemList/constants/vseparation = 2
ItemList/fonts/font = null
ItemList/styles/bg = null
ItemList/styles/bg_focus = null
ItemList/styles/cursor = null
ItemList/styles/cursor_unfocused = null
ItemList/styles/selected = null
ItemList/styles/selected_focus = null

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.603922, 0.113725, 0.627451, 0.411765 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Assets/Fonts/arial.ttf"

[sub_resource type="DynamicFont" id=6]
size = 48
outline_color = Color( 0.866667, 0.729412, 0.52549, 1 )
extra_spacing_top = 5
extra_spacing_bottom = 5
extra_spacing_char = 2
font_data = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 55
outline_size = 1
outline_color = Color( 0.0448608, 0.478516, 0.392123, 1 )
extra_spacing_char = 1
font_data = ExtResource( 4 )

[node name="MainMenu" type="Node"]
script = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 1528.26, 844.594 )
scale = Vector2( 0.587957, 0.628457 )
texture = ExtResource( 5 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.749662
anchor_top = 0.30631
anchor_right = 0.886641
anchor_bottom = 0.66094
size_flags_vertical = 9
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ItemList" type="ItemList" parent="PanelContainer"]
margin_right = 263.0
margin_bottom = 414.0
theme = SubResource( 2 )
custom_styles/selected_focus = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
items = [ "Continue", null, false, "New Game", null, false, "Load", null, false, "Settings", null, false, "Credits", null, false, "Quit", null, false ]
auto_height = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeIn" parent="." instance=ExtResource( 3 )]
visible = false

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 123.0
margin_top = 363.0
margin_right = 440.0
margin_bottom = 509.0
custom_fonts/normal_font = SubResource( 7 )
text = "FALLOUT:
NUCLEAR WINTER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TransitionBackground" type="Timer" parent="."]
wait_time = 8.0
autostart = true
__meta__ = {
"_editor_description_": "Used to transition background sprite image"
}
[connection signal="item_activated" from="PanelContainer/ItemList" to="PanelContainer/ItemList" method="_on_ItemList_item_activated"]
[connection signal="fade_finished" from="FadeIn" to="PanelContainer/ItemList" method="_on_FadeIn_fade_finished"]
[connection signal="timeout" from="TransitionBackground" to="." method="_on_TransitionBackground_timeout"]
